--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -376,7 +376,7 @@
     <dependency>
       <groupId>edu.berkeley.cs.jqf</groupId>
       <artifactId>jqf-fuzz</artifactId>
-      <version>1.8</version>
+      <version>2.0-SNAPSHOT</version>
     </dependency>
     <!-- JUnit-QuickCheck: API to write generators -->
     <dependency>
@@ -415,7 +415,7 @@
       <plugin>
         <groupId>edu.berkeley.cs.jqf</groupId>
         <artifactId>jqf-maven-plugin</artifactId>
-        <version>1.8</version>
+        <version>2.0-SNAPSHOT</version>
       </plugin>
       <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
