--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -38,6 +38,11 @@
   </properties>
 
   <dependencies>
+    <dependency>                                                                                                                                                                                                                               
+      <groupId>net.moznion</groupId>                                                                                                                                                                                                           
+      <artifactId>random-string</artifactId>                                                                                                                                                                                                   
+      <version>1.1.0</version>                                                                                                                                                                                                                 
+    </dependency>
     <dependency>
       <groupId>org.apache.hadoop.thirdparty</groupId>
       <artifactId>hadoop-shaded-protobuf_3_7</artifactId>
