--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -38,10 +38,10 @@
   </properties>
 
   <dependencies>
-    <dependency>                                                                                                                                                                                                                               
-      <groupId>net.moznion</groupId>                                                                                                                                                                                                           
-      <artifactId>random-string</artifactId>                                                                                                                                                                                                   
-      <version>1.1.0</version>                                                                                                                                                                                                                 
+    <dependency>
+      <groupId>com.github.mifmif</groupId>
+      <artifactId>generex</artifactId>
+      <version>1.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop.thirdparty</groupId>
