minimize the change

--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -523,7 +523,7 @@
               <value>org.apache.hadoop.test.TimedOutTestsListener</value>
             </property>
           </properties>
-          <argLine>@{argLine}</argLine>
+        <argLine>@{argLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -937,7 +937,7 @@
               <testFailureIgnore>${ignoreTestFailure}</testFailureIgnore>
               <forkCount>${testsThreadCount}</forkCount>
               <reuseForks>false</reuseForks>
-              <argLine>@{argLine} -DminiClusterDedicatedDirs=true</argLine>
+              <argLine>@{argLine} ${maven-surefire-plugin.argLine} -DminiClusterDedicatedDirs=true</argLine>
               <systemPropertyVariables>
                 <testsThreadCount>${testsThreadCount}</testsThreadCount>
                 <test.build.data>${test.build.data}/${surefire.forkNumber}</test.build.data>
