--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -376,7 +376,18 @@
     <dependency>
       <groupId>edu.berkeley.cs.jqf</groupId>
       <artifactId>jqf-fuzz</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>1.9</version>
+    </dependency>
+    <dependency>
+      <groupId>edu.illinois.confuzz</groupId>
+      <artifactId>confuzz-guidance</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.squareup.okio</groupId>
+          <artifactId>okio</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <!-- JUnit-QuickCheck: API to write generators -->
     <dependency>
@@ -415,7 +426,12 @@
       <plugin>
         <groupId>edu.berkeley.cs.jqf</groupId>
         <artifactId>jqf-maven-plugin</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>1.9</version>
+      </plugin>
+      <plugin>
+        <groupId>edu.illinois.confuzz</groupId>
+        <artifactId>confuzz-maven-plugin</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
       </plugin>
       <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
