--- a/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/pom.xml
+++ b/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/pom.xml
@@ -380,6 +380,10 @@
           </filesets>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>edu.illinois.confuzz</groupId>
+        <artifactId>confuzz-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
   <!-- TODO: Remove this profile when hamlet was removed. -->
