--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -52,6 +52,10 @@
           <groupId>org.ow2.asm</groupId>
           <artifactId>asm-commons</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>com.google.collections</groupId>
+          <artifactId>google-collections</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <!-- JQF: test dependency for @Fuzz annotation -->
