move regex into each submodule

--- a/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/pom.xml
+++ b/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/pom.xml
@@ -266,7 +266,10 @@
 
 
     <plugins>
-
+      <plugin>
+        <groupId>edu.illinois.confuzz</groupId>
+        <artifactId>confuzz-maven-plugin</artifactId>
+      </plugin>
       <!-- Publish tests jar -->
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
